# InfiniTAM

./: CMakeLists.txt
InfiniTAM/: CMakeLists.txt
InfiniTAM/Engine/: CMakeLists.txt  UIEngine.cpp
InfiniTAM/ITMLib/: CMakeLists.txt
InfiniTAM/ORUtils/: CMakeLists.txt
InfiniTAM/Utils/: CMakeLists.txt
InfiniTAM/cmake/: FindRealSense.cmake
